tests/snapshots/parser__fn_call_lift__call_on_index.snap
---
source: tests/parser.rs
expression: "parse(\"xs[0](1)\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Index {
                    recv: Identifier(
                        "xs",
                        Span {
                            start: 0,
                            end: 2,
                        },
                    ),
                    key: Int(
                        0,
                        Span {
                            start: 3,
                            end: 4,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                args: [
                    Int(
                        1,
                        Span {
                            start: 6,
                            end: 7,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
)
