tests/snapshots/parser__fn_call_lift__chained_call.snap
---
source: tests/parser.rs
expression: "parse(\"f()(1)\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Call {
                    callee: Identifier(
                        "f",
                        Span {
                            start: 0,
                            end: 1,
                        },
                    ),
                    args: [],
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
                args: [
                    Int(
                        1,
                        Span {
                            start: 4,
                            end: 5,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 6,
                },
            },
        ),
    ],
)
