tests/snapshots/parser__fn_call_lift__multiline_args_with_trailing_comma.snap
---
source: tests/parser.rs
expression: "parse(\"f(\\n  1,\\n  2,\\n)\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "f",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [
                    Int(
                        1,
                        Span {
                            start: 5,
                            end: 6,
                        },
                    ),
                    Int(
                        2,
                        Span {
                            start: 10,
                            end: 11,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ),
    ],
)
