tests/snapshots/parser__fn_call_lift__newline_after_open_paren.snap
---
source: tests/parser.rs
expression: "parse(\"f(\\n1, 2)\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "f",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [
                    Int(
                        1,
                        Span {
                            start: 3,
                            end: 4,
                        },
                    ),
                    Int(
                        2,
                        Span {
                            start: 6,
                            end: 7,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
)
