tests/snapshots/parser__fn_call_lift__trailing_comma.snap
---
source: tests/parser.rs
expression: "parse(\"f(1,)\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "f",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [
                    Int(
                        1,
                        Span {
                            start: 2,
                            end: 3,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
)
